Load more button z-index fix

--- a/src/containers/Leaderboard/Leaderboard.module.scss
+++ b/src/containers/Leaderboard/Leaderboard.module.scss
@@ -22,6 +22,7 @@
     min-height: 25rem;
     max-height: 70vh;
     padding: $l-spacing;
+    transform: none;
   }
 }
 
